# DrosophilaNucleusTracking

./: .gitattributes  .gitignore  pyproject.toml  readme.md
analysis/: dataset_intro.ipynb  improve_division_tracking.ipynb  readme.md
animations/: 1. Lineage Animations.ipynb  2. Wave Animations.ipynb
figures/: 2. Nuclear Density and Spreading.ipynb  Figure 2 plots.ipynb  Presentation Figures.ipynb  density_vs_wave_speeds.ipynb  describe_clone_shapes.ipynb  figure 1 plots.ipynb  genotype_comparison.ipynb  measure_density.ipynb  measure_nc_movement.ipynb  measure_yoyo_extent.ipynb  surface_integrals.ipynb  trajectories.ipynb  transcription_oneslide.ipynb  wave_speeds.ipynb
figures/old/: 2. Nuclear Density and Spreading.ipynb  Presentation Figures.ipynb  trajectories.ipynb
src/dnt/: __init__.py  calculate_density.py  color_palettes.py  division_times.py  load_data.py  timepoints.py
