[project]
name = "dnt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harrison-Oatman", email = "46121828+Harrison-Oatman@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "colorcet>=3.1.0",
    "dtaidistance>=2.3.13",
    "h5py>=3.14.0",
    "napari[pyqt5]>=0.6.5",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
