[project]
name = "dnt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harrison-Oatman", email = "46121828+Harrison-Oatman@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "blender-tissue-cartography>=0.0.5",
    "colorcet>=3.1.0",
    "colorstamps>=0.1.3",
    "dtaidistance>=2.3.13",
    "h5py>=3.14.0",
    "napari[pyqt5]>=0.6.5",
    "notebook>=7.4.7",
    "pymeshlab>=2025.7",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statannotations>=0.7.2",
    "tables>=3.10.2",
]

[build-system]
requires = ["uv_build>=0.8.14"]
build-backend = "uv_build"
